RIA-7511: Fix Checkstyle violations